Fix reference to commons.logging in modules; adding automatic module name to Ant/Maven tools; fix deprecation warnings with Java 9+