@@ -91,7 +91,7 @@ public class MonitoringFrame extends Frame {
     }
 
     public void monitorEnter(int local) {
-        monitored.add(new Integer(local));
+        monitored.add(Integer.valueOf(local));
     }
 
     public void monitorExit(int local) {
